Update a.html style

--- a/a.html
+++ b/a.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>记录</title>
 </head>
 <body>
-<img src="./a.jpg" >
+<img src="./a.jpg" style="width: 100px">
 <input autofocus id="input">
 <div id="content">
 
