Update a.html style

--- a/a.html
+++ b/a.html
@@ -5,7 +5,7 @@
     <title>记录</title>
 </head>
 <body>
-❤
+<span style="color: red">❤</span>
 <img src="./a.jpg" style="width: 100px">
 <input autofocus id="input">
 <div id="content">
