focus ios 上实现不了

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <!--<span style="color: red">❤</span>-->
     <!--<img src="img/a.jpg" style="width: 100px">-->
     <button id="copy">copy</button>
-    <input autofocus id="input" style="width: 100%; margin: 10px 0;">
+    <input id="input" autofocus style="width: 100%; margin: 10px 0;">
     <div id="content"></div>
 </div>
 
 <script !src="">
-    // autofocus
-
     class Content {
         // 私有
         #dom
