--- a/index.html
+++ b/index.html
@@ -5,65 +5,23 @@
 <!--    移动端显示优化-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>记录</title>
+<!--    css-->
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<div class="container">
-    <!--<span style="color: red">❤</span>-->
-    <!--<img src="img/a.jpg" style="width: 100px">-->
+<div class="container" style="padding: 10px;">
     <button id="copy">copy</button>
     <input id="input" autofocus style="width: 100%; margin: 10px 0;">
     <div id="content"></div>
+
+<!--    debug-->
+    <div id="log" style=""></div>
 </div>
-
-<script !src="">
-    class Content {
-        // 私有
-        #dom
-        #char
-        constructor() {
-            this.#dom = document.querySelector('#' + 'content')
-            this.#char = '<br>'
-        }
-        static new(...args) {
-            return new this(...args)
-        }
-        get() {
-            if (this.#dom.innerHTML === '') return []
-            let v = this.#dom.innerHTML.split(this.#char)
-            return v
-        }
-        set(v) {
-            this.#dom.innerHTML = v.join(this.#char)
-        }
-    }
-    const content = Content.new()
-
-    const bind = (id, eventName, callback) => {
-        document.querySelector('#' + id).addEventListener(eventName, e => {
-            callback(e)
-        })
-    }
-
-    bind('input', 'keydown', e => {
-        if (e.keyCode !== 13) return
-        let target = e.target
-        let v = target.value
-        if (!v) return
-
-        const list = content.get().concat([v])
-        content.set(list)
-        target.value = ''
-        target.focus()
-    })
-
-    bind('copy', 'click', e => {
-        // 复制文本到剪贴板
-        navigator.clipboard.writeText(content.get().join('\n')).then(function() {
-        }, function(err) {
-            console.error('Async: Could not copy text: ', err);
-        });
-    })
+<!--js-->
+<script src="utils.js"></script>
+<script src="main.js"></script>
+<script>
+    // debug
 </script>
 </body>
 </html>
