--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <!--    debug-->
     <div id="log" style=""></div>
 </div>
+
 <!--js-->
-<script src="utils.js"></script>
+<script src="js/utils.js"></script>
 <script src="main.js"></script>
 <script>
     // debug
