--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </div>
 
 <!--js-->
-<script src="js/utils.js"></script>
-<script src="main.js"></script>
+<script src="js/utils.js" type="module"></script>
+<script src="main.js" type="module"></script>
 <script>
     // debug
 </script>
