--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
 <!--    移动端显示优化-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/a.jpg">
     <title>记录</title>
 <!--    css-->
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 <div class="container" style="padding: 10px;">
@@ -19,6 +20,7 @@
 </div>
 
 <!--js-->
+<!--module 可以解决函数命名冲突，还不用管下面 js 文件写的顺序-->
 <script src="js/utils.js" type="module"></script>
 <script src="main.js" type="module"></script>
 <script>
